--- a/src/pages/hobbies.module.css
+++ b/src/pages/hobbies.module.css
@@ -2,8 +2,9 @@
 	max-width: 960px;
 	margin: 0 auto;
 	color: #ddd;
-	padding: 100px 0;
+	padding: 100px 20px;
 	position: relative;
+	z-index: 1;
 }
 .about p {
 	margin-top: 40px;
@@ -77,5 +78,6 @@
 @media only screen and (min-width: 992px) {
 	.about {
 		z-index: 1;
+		padding: 100px 0px;
 	}
 }
